corrindo copy/paste sem vergonha

--- a/src/Diplomas x Desempenho.ipynb
+++ b/src/Diplomas x Desempenho.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cruzando diplomas de letras com notas de língua portuguesa"
+    "### Cruzando diplomas de matemática com notas de matemática"
    ]
   },
   {
